<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.donygeorge.nytimessearch.activities.FilterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/begin_date" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spSortOrder"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/spSortOrder"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvDate"
        android:text="@string/sort_order" />

    <Spinner
        android:id="@+id/spSortOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDate"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:entries="@array/sort_order" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spSortOrder"
        android:text="@string/new_desk" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spSortOrder"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <CheckBox
            android:id="@+id/cb_arts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arts" />

        <CheckBox
            android:id="@+id/cbFashion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fashion" />

        <CheckBox
            android:id="@+id/cbSports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sports" />
    </LinearLayout>

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />

</RelativeLayout>
